--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,155 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/srl_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:padding="@dimen/padding_default"
     tools:context=".ui.module.login.LoginActivity">
 
-    <TextView
-        android:id="@+id/tv_version_apps_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/open_sans_light"
-        android:text="@string/version_apps"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lt_login"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/image_width_rectangular_default"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.275"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:lottie_autoPlay="false"
-        app:lottie_fileName="login.json"
-        app:lottie_loop="false"
-        app:lottie_speed="1.5" />
+        android:layout_height="match_parent"
+        android:padding="@dimen/padding_default">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/open_sans_bold"
-        android:text="@string/app_name"
-        android:textSize="@dimen/text_big"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/lt_login"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/lt_login"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.404" />
+        <TextView
+            android:id="@+id/tv_version_apps_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_light"
+            android:text="@string/version_apps"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/tv_label_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/open_sans_bold"
-        android:text="@string/label_login"
-        android:textSize="@dimen/text_biggest"
-        app:layout_constraintEnd_toEndOf="@+id/lt_login"
-        app:layout_constraintStart_toStartOf="@+id/lt_login"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lt_login"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/image_width_rectangular_default"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.275"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:lottie_autoPlay="false"
+            app:lottie_fileName="login.json"
+            app:lottie_loop="false"
+            app:lottie_speed="1.5" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_username_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_half_default"
-        android:layout_marginTop="@dimen/margin_half_default"
-        android:layout_marginEnd="@dimen/margin_half_default"
-        android:background="@drawable/frame_text_input_layout"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_label_login">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_bold"
+            android:text="@string/app_name"
+            android:textSize="@dimen/text_big"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/lt_login"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="@+id/lt_login"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.404" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tie_username_login"
+        <TextView
+            android:id="@+id/tv_label_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_bold"
+            android:text="@string/label_login"
+            android:textSize="@dimen/text_biggest"
+            app:layout_constraintEnd_toEndOf="@+id/lt_login"
+            app:layout_constraintStart_toStartOf="@+id/lt_login"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_username_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/frame_text_input_layout_inner"
-            android:hint="@string/label_username"
-            android:inputType="textEmailAddress"
-            android:singleLine="true"
+            android:layout_marginStart="@dimen/margin_half_default"
+            android:layout_marginTop="@dimen/margin_half_default"
+            android:layout_marginEnd="@dimen/margin_half_default"
+            android:background="@drawable/frame_text_input_layout"
             app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp" />
-    </com.google.android.material.textfield.TextInputLayout>
+            app:boxStrokeWidthFocused="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_label_login">
 
-    <ImageButton
-        android:id="@+id/ib_show_password_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_secondary_ripple_primary"
-        android:padding="@dimen/padding_half_half_add_half_default"
-        app:layout_constraintBottom_toBottomOf="@+id/til_password_login"
-        app:layout_constraintEnd_toEndOf="@+id/til_username_login"
-        app:layout_constraintTop_toTopOf="@+id/til_password_login"
-        app:srcCompat="@drawable/ic_round_visibility_24"
-        app:tint="@color/primary" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tie_username_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/frame_text_input_layout_inner"
+                android:hint="@string/label_username"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_password_login"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_half_default"
-        android:layout_marginEnd="@dimen/margin_half_default"
-        android:background="@drawable/frame_text_input_layout"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:layout_constraintEnd_toStartOf="@+id/ib_show_password_login"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/til_username_login"
-        app:layout_constraintTop_toBottomOf="@+id/til_username_login">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tie_password_login"
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/ib_show_password_login"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/frame_text_input_layout_inner"
-            android:hint="@string/label_password"
-            android:inputType="textPassword"
-            android:singleLine="true"
+            android:background="@drawable/button_secondary_ripple_primary"
+            android:padding="@dimen/padding_half_half_add_half_default"
+            app:layout_constraintBottom_toBottomOf="@+id/til_password_login"
+            app:layout_constraintEnd_toEndOf="@+id/til_username_login"
+            app:layout_constraintTop_toTopOf="@+id/til_password_login"
+            app:srcCompat="@drawable/ic_round_visibility_24"
+            app:tint="@color/primary" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_password_login"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_half_default"
+            android:layout_marginEnd="@dimen/margin_half_default"
+            android:background="@drawable/frame_text_input_layout"
             app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp" />
-    </com.google.android.material.textfield.TextInputLayout>
+            app:boxStrokeWidthFocused="0dp"
+            app:layout_constraintEnd_toStartOf="@+id/ib_show_password_login"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/til_username_login"
+            app:layout_constraintTop_toBottomOf="@+id/til_username_login">
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_default"
-        android:text="@string/label_login"
-        app:cornerRadius="@dimen/round_default"
-        app:layout_constraintEnd_toEndOf="@+id/ib_show_password_login"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/til_password_login"
-        app:layout_constraintTop_toBottomOf="@+id/til_password_login" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tie_password_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/frame_text_input_layout_inner"
+                android:hint="@string/label_password"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/btn_cancel_login"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        app:cornerRadius="@dimen/round_default"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_login"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/btn_login"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"
-        app:layout_constraintVertical_bias="0.0" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_default"
+            android:text="@string/label_login"
+            app:cornerRadius="@dimen/round_default"
+            app:layout_constraintEnd_toEndOf="@+id/ib_show_password_login"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/til_password_login"
+            app:layout_constraintTop_toBottomOf="@+id/til_password_login" />
+
+        <Button
+            android:id="@+id/btn_cancel_login"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            app:cornerRadius="@dimen/round_default"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/btn_login"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/btn_login"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login"
+            app:layout_constraintVertical_bias="0.0" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
