--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -111,6 +111,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/tv_message_show_hide_password"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/margin_half_default"
