--- a/app/src/main/res/drawable/button_dark_green_ripple_white.xml
+++ b/app/src/main/res/drawable/button_dark_green_ripple_white.xml
@@ -4,7 +4,7 @@
     android:color="@color/white">
     <item android:id="@+id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/green"/>
+            <solid android:color="@color/dark_green"/>
             <corners android:radius="@dimen/round_default"/>
         </shape>
     </item>
