--- a/app/src/main/res/values/dimension.xml
+++ b/app/src/main/res/values/dimension.xml
@@ -14,6 +14,7 @@
     <dimen name="margin_half_half_default">5dp</dimen>
     <dimen name="margin_multiple_default">40dp</dimen>
     <dimen name="margin_multiple_add_default">50dp</dimen>
+    <dimen name="margin_triple_default">60dp</dimen>
 
     <dimen name="image_width_rectangular_default">300dp</dimen>
     <dimen name="image_height_rectangular_default">200dp</dimen>
