--- a/app/src/main/res/layout/add_admin.xml
+++ b/app/src/main/res/layout/add_admin.xml
@@ -58,5 +58,5 @@
         android:background="@drawable/button_red_ripple_white"
         android:fontFamily="@font/open_sans_bold"
         android:textColor="@color/white"
-        android:text="@string/label_non_active_admin_now" />
+        android:text="@string/label_non_active" />
 </LinearLayout>
