--- a/app/src/main/res/layout/edit_admin.xml
+++ b/app/src/main/res/layout/edit_admin.xml
@@ -32,7 +32,7 @@
         app:tint="@color/primary" />
 
     <TextView
-        android:id="@+id/tv_email_admin_name"
+        android:id="@+id/tv_email_admin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_half_half_default"
@@ -55,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_email_admin_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_email_admin"
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
@@ -74,6 +74,8 @@
             android:id="@+id/iv_admin_reset_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_marginStart="@dimen/margin_half_default"
             android:padding="@dimen/padding_half_half_add_default"
             android:background="@drawable/button_primary_ripple_white"
@@ -83,6 +85,8 @@
             android:id="@+id/iv_admin_lock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_marginStart="@dimen/margin_half_default"
             android:padding="@dimen/padding_half_half_add_default"
             android:background="@drawable/button_red_ripple_white"
@@ -92,6 +96,8 @@
             android:id="@+id/iv_admin_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_marginStart="@dimen/margin_half_default"
             android:padding="@dimen/padding_half_half_add_default"
             android:background="@drawable/button_red_ripple_white"
