--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -132,7 +132,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_default"
-                    android:text="@string/label_login"
+                    android:text="@string/label_change_password"
                     app:cornerRadius="@dimen/round_default" />
 
                 <Button
