--- a/app/src/main/res/layout/created_and_update.xml
+++ b/app/src/main/res/layout/created_and_update.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/padding_default">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_created"
