--- a/app/src/main/res/layout/activity_connection_error.xml
+++ b/app/src/main/res/layout/activity_connection_error.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding_default"
-    tools:context=".ui.module.ConnectionErrorActivity">
+    tools:context=".ui.component.activity.ConnectionErrorActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lt_error"
