--- a/app/src/main/res/layout/activity_crop_photo.xml
+++ b/app/src/main/res/layout/activity_crop_photo.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.module.cropphoto.CropPhotoActivity">
+    tools:context=".ui.component.activity.CropPhotoActivity">
 
     <com.theartofdev.edmodo.cropper.CropImageView
         xmlns:custom="http://schemas.android.com/apk/res-auto"
