--- a/app/src/main/res/layout/item_add_image.xml
+++ b/app/src/main/res/layout/item_add_image.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="information.json"
+        app:lottie_fileName="add_image.json"
         app:lottie_loop="true"
         app:lottie_speed="1.5" />
 
