--- a/app/src/main/res/layout/activity_detail_crime_location.xml
+++ b/app/src/main/res/layout/activity_detail_crime_location.xml
@@ -39,6 +39,26 @@
                 android:orientation="vertical" >
 
                 <include
+                    android:id="@+id/i_crime_location_image_slider"
+                    layout="@layout/image_slider"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_half_default"/>
+
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/sfl_crime_location_image_slider"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:id="@+id/iv_shimmer"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/image_width_rectangular_default"
+                        android:layout_marginBottom="@dimen/margin_half_default"/>
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <include
                     android:id="@+id/i_name"
                     layout="@layout/detail_crime_location_name"
                     android:layout_width="match_parent"
