--- a/core/src/main/res/layout/fragment_image_slider.xml
+++ b/core/src/main/res/layout/fragment_image_slider.xml
@@ -12,6 +12,8 @@
         android:layout_height="match_parent"
         android:scaleType="center"
         android:src="@color/primary"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -23,6 +25,8 @@
         android:id="@+id/iv_edit_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
         android:background="@drawable/button_white_ripple_primary"
         android:layout_margin="@dimen/margin_smallest_default"
         android:padding="@dimen/padding_smallest_default"
