--- a/app/src/main/res/layout/activity_form_crime_location.xml
+++ b/app/src/main/res/layout/activity_form_crime_location.xml
@@ -72,6 +72,7 @@
                 android:layout_marginBottom="@dimen/margin_half_half_default"/>
 
             <LinearLayout
+                android:id="@+id/ll_lat_lang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/margin_half_half_default"
