--- a/app/src/main/res/layout/item_add_image.xml
+++ b/app/src/main/res/layout/item_add_image.xml
@@ -45,7 +45,7 @@
             android:id="@+id/iv_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:src="@drawable/frame_background_primary" />
 
         <ImageView
